# arxiv-mcp-server

./: .gitignore  Dockerfile  README.md  TODO.md  demo_mcp_client.py  pyproject.toml  read_pool_cleaning_paper.py  run_tests.py  search_pool_cleaning_robots.py  test_mcp_client.py  test_mcp_integration.py  test_vscode_config.py  update_vscode_config.py
docs/: DEPLOYMENT.md  MCP_CLIENT_EXAMPLE.md  MCP_STDIO_SERVER_PRINCIPLES.md  VS_CODE_INTEGRATION.md
examples/: README.md  bash-mcp-client.sh
issues/: 001-vscode-mcp-server-startup-issue-resolution.md  001-vscode-mcp-server-startup-issue.md
scripts/: deploy.sh  docker-build.sh  show-help.sh
src/arxiv_mcp_server/: __init__.py  config.py  server.py
src/arxiv_mcp_server/resources/: papers.py
src/arxiv_mcp_server/tools/: __init__.py  download.py  list_papers.py  list_tools.py  read_paper.py  search.py
tests/: test_config.py  test_mcp_server_interfaces.py
tests/integration/: test_mcp_server.py
tests/tools/: test_download.py  test_search.py
